--- a/package.json
+++ b/package.json
@@ -9,13 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
+    "expo": "^48.0.0",
+    "expo-crypto": "~12.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-jwt": "^1.7.0",
+    "expo-secure-store": "~12.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.71.14",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-quick-crypto": "^0.6.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-sweet-alert": "^3.5.0",
+    "react-native-vector-icons": "^10.0.3",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.53"
   },
   "private": true
 }
